--- a/renren-api/src/main/resources/application-dev.yml
+++ b/renren-api/src/main/resources/application-dev.yml
@@ -3,9 +3,9 @@ spring:
     type: com.alibaba.druid.pool.DruidDataSource
     driverClassName: com.mysql.jdbc.Driver
     druid:
-      url: jdbc:mysql://localhost:3306/renren_security?allowMultiQueries=true&useUnicode=true&characterEncoding=UTF-8
-      username: renren
-      password: 123456
+      url: jdbc:mysql://47.98.178.17:3306/renren_security?allowMultiQueries=true&useUnicode=true&characterEncoding=UTF-8
+      username: root
+      password: root
       initial-size: 10
       max-active: 100
       min-idle: 10
