--- a/renren-generator/src/main/resources/application.yml
+++ b/renren-generator/src/main/resources/application.yml
@@ -13,9 +13,9 @@ spring:
     datasource:
         type: com.alibaba.druid.pool.DruidDataSource
         driverClassName: com.mysql.jdbc.Driver
-        url: jdbc:mysql://localhost:3306/renren_security?useUnicode=true&characterEncoding=UTF-8
-        username: renren
-        password: 123456
+        url: jdbc:mysql://47.98.178.17:3306/renren_security?useUnicode=true&characterEncoding=UTF-8
+        username: root
+        password: root
     jackson:
         time-zone: GMT+8
         date-format: yyyy-MM-dd HH:mm:ss
