--- a/renren-admin/src/main/resources/application-dev.yml
+++ b/renren-admin/src/main/resources/application-dev.yml
@@ -4,11 +4,11 @@ spring:
     driverClassName: com.mysql.jdbc.Driver
     druid:
       first:  #数据源1
-        url: jdbc:mysql://47.98.178.17:3306/renren_security?allowMultiQueries=true&useUnicode=true&characterEncoding=UTF-8
+        url: jdbc:mysql://47.98.178.17:3306/invoice?allowMultiQueries=true&useUnicode=true&characterEncoding=UTF-8
         username: root
         password: root
       second:  #数据源2
-        url: jdbc:mysql://47.98.178.17:3306/renren_security?allowMultiQueries=true&useUnicode=true&characterEncoding=UTF-8
+        url: jdbc:mysql://47.98.178.17:3306/invoice?allowMultiQueries=true&useUnicode=true&characterEncoding=UTF-8
         username: root
         password: root
       initial-size: 10
