--- a/renren-api/src/main/resources/application-test.yml
+++ b/renren-api/src/main/resources/application-test.yml
@@ -3,7 +3,7 @@ spring:
     type: com.alibaba.druid.pool.DruidDataSource
     driverClassName: com.mysql.jdbc.Driver
     druid:
-      url: jdbc:mysql://localhost:3306/renren_security?allowMultiQueries=true&useUnicode=true&characterEncoding=UTF-8
+      url: jdbc:mysql://localhost:3306/invoice?allowMultiQueries=true&useUnicode=true&characterEncoding=UTF-8
       username: renren
       password: 123456
       initial-size: 10
