--- a/renren-admin/pom.xml
+++ b/renren-admin/pom.xml
@@ -21,6 +21,7 @@
 		<commons-lang3.version>3.3.2</commons-lang3.version>
 		<commons-io.version>1.3.2</commons-io.version>
 		<commons-net.version>3.3</commons-net.version>
+		<apache.poi.version>3.6</apache.poi.version>
 	</properties>
 
 	<dependencies>
@@ -114,6 +115,12 @@
 			<groupId>commons-net</groupId>
 			<artifactId>commons-net</artifactId>
 			<version>${commons-net.version}</version>
+		</dependency>
+		<!-- https://mvnrepository.com/artifact/org.apache.poi/poi  Excel 导出-->
+		<dependency>
+			<groupId>org.apache.poi</groupId>
+			<artifactId>poi</artifactId>
+			<version>${apache.poi.version}</version>
 		</dependency>
 	</dependencies>
 
