#添加热部署

--- a/renren-admin/pom.xml
+++ b/renren-admin/pom.xml
@@ -122,6 +122,12 @@
 			<artifactId>poi</artifactId>
 			<version>${apache.poi.version}</version>
 		</dependency>
+		<!-- 热部署 -->
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-devtools</artifactId>
+			<optional>true</optional>
+		</dependency>
 	</dependencies>
 
 	<build>
